--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "config": "^1.21.0",
     "delivery": "0.0.5",
     "firebase": "^3.4.1",
     "fs-extra": "^0.30.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.3.1"
   },
   "devDependencies": {},
   "scripts": {
