--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "delivery": "0.0.5",
     "firebase": "^3.4.1",
     "fs-extra": "^0.30.0",
+    "mkdirp": "^0.5.1",
     "socket.io": "^1.4.8",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.3.1"
