--- a/app/package.json
+++ b/app/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "config": "^1.21.0",
     "delivery": "0.0.5",
     "firebase": "^3.4.1",
     "fs-extra": "^0.30.0",
     "mkdirp": "^0.5.1",
+    "redis": "^2.6.3",
     "socket.io": "^1.4.8",
+    "socket.io-redis": "^2.0.1",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.3.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
