Static port binding

--- a/.build.env.example
+++ b/.build.env.example
@@ -24,6 +24,7 @@ REDIS_BUILD_FILE=docker-compose.redis.yml
 
 # Redis internal port
 REDIS_PORT=6379
+REDIS_EXTERNAL_PORT=32770
 
 # DockerHub image for ambassador
 AMBASSADOR_IMAGE=jpetazzo/hamba
