Production configuration hosting

--- a/.build.env.example
+++ b/.build.env.example
@@ -32,6 +32,13 @@ AMBASSADOR_IMAGE=jpetazzo/hamba
 # ECS cluster name
 ECS_CLUSTER_NAME=d-loc-routing-server
 
+# KMS information
+KMS_ALIAS=alias/d-loc-kms
+
+# Production ENV file
+ENV_FILE=.env
+ENV_BUCKET=
+
 # AWS login credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
