--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
+*.pyc
+
+.build.env
+.env
 .idea
+
 extra-git
+routing-server.sublime-workspace
+build/docker-compose*
+
 node_modules/
+npm-debug.log
+
 downloads/
 logs/
-routing-server.sublime-workspace
-npm-debug.log
 data/
-.build.env
-*.pyc
-build/docker-compose*
