--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -6,6 +6,7 @@ RUN apt-get update
 RUN apt-get install -y \
   curl \
   python3 \
+  python3-pip \
   python-yaml \
   apt-transport-https \
   ca-certificates \
@@ -31,6 +32,8 @@ RUN curl -L "https://github.com/docker/compose/releases/download/1.9.0/docker-co
 RUN curl -o /usr/local/bin/ecs-cli https://s3.amazonaws.com/amazon-ecs-cli/ecs-cli-linux-amd64-latest \
   && chmod +x /usr/local/bin/ecs-cli \
   && ecs-cli --version
+
+RUN pip3 install boto3
 
 WORKDIR /usr/src
 
