Travis CI deployments

--- a/.build.env.example
+++ b/.build.env.example
@@ -10,6 +10,7 @@ COMPOSE_FILE_NAME=docker-compose.latest.yml
 
 # ECS project name for the server
 SERVER_PROJECT_NAME=server
+SERVER_SCALE=3
 
 # Path and filename of server-specific compose file
 SERVER_BUILD_PATH=build
