--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     command: "start-server.sh"
     cpu_shares: 10
     mem_limit: 104857600 # 500 MiB
+    ports:
+      - 6379:6379
     volumes:
       - data:/data
     logging:
