--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ".:/usr/src"
       - "/var/run/docker.sock:/var/run/docker.sock"
-    environment: :
+    environment:
       - DOCKER_REGISTRY
       - DOCKER_USERNAME
       - DOCKER_PASSWORD
