--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -28,4 +28,6 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_DEFAULT_REGION
+      - ENV_BUCKET
+      - KMS_ALIAS
     privileged: true
