--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -29,5 +29,5 @@ services:
       - AWS_DEFAULT_REGION
       - ENV_BUCKET
       - KMS_ALIAS
-      - "VERSION=${TRAVIS_COMMIT}""
+      - "VERSION=${TRAVIS_COMMIT}"
     privileged: true
